<resources>
    <string name="app_name">TrackMyNight</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="Bier">Bier</string>
    <string name="Wein">Wein</string>
    <string name="Schnaps">Schnaps</string>
    <string name="Vodka">Vodka</string>
    <string name="Whisky">Whisky</string>

    <string name="defaultValue">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="maennlich">männlich</string>
    <string name="weiblich">weiblich</string>
    <string name="geschlecht">Geschlecht</string>
    <string name="speichern">Speichern</string>
    <string name="gewicht">Gewicht</string>
    <string name="gewichteinheit">in kg</string>
    <string name="groesse">Körpergröße</string>
    <string name="grosseeinheit">in cm</string>
    <string name="alter">Alter</string>
    <string name="altereinheit">in Jahren</string>
    <string name="username">Username</string>

    <string name="userProfil">User Profil</string>
    <string name="getraenkewahl">Zum Tracking</string>
    <string name="promille">Promille Berechnen</string>
    <string name="zuruecksetzen">Zurücksetzen</string>
    <string name="begintracking">Tracking Starten</string>
    <string name="stoptracking">Tracking Gestoppt</string>
    <string name="countnegativ1">Egal wieviel du getrunken hast, ein Überlauf auf -1 ist nicht möglich!</string>
    <string name="reset">Wircklich zurücksetzen ?</string>
    <string name="Ja">Ja</string>
    <string name="Nein">Nein</string>
    <string name="endzeit">Endzeit :</string>
    <string name="startzeit">Startzeit:</string>
    <string name="zur_ckgelegte_strecke">Strecke</string>
    <string name="fotos">Fotos</string>
    <string name="textnachrichten">SMS</string>
    <string name="anrufe">Anrufe</string>
    <string name="alkoholkonsum">Alkohol</string>
    <string name="tracking_stoppen">Tracking Stoppen</string>
    <string name="stoppen">Tracking wircklich stoppen ?</string>
    <string name="nicht_implementiert">Nicht implementiert !</string>

</resources>
