<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="at.mandic.trackmynight.Drinks"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/bier"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/plusWein"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/wein"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="160dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="68dp"
        app:layout_constraintBottom_toBottomOf="@+id/plusSchnaps"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bier"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/schnaps"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/wein"
        app:layout_constraintRight_toRightOf="@+id/wein"
        app:layout_constraintTop_toBottomOf="@+id/wein"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/vodka"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/schnaps"
        app:layout_constraintRight_toRightOf="@+id/schnaps"
        app:layout_constraintTop_toBottomOf="@+id/schnaps"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/whisky"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/vodka"
        app:layout_constraintRight_toRightOf="@+id/vodka"
        app:layout_constraintTop_toBottomOf="@+id/vodka"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/cntBier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/defaultValue"
        app:layout_constraintLeft_toLeftOf="@+id/cntWein"
        app:layout_constraintRight_toRightOf="@+id/cntWein"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/cntWein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/plusWein"
        app:layout_constraintLeft_toLeftOf="@+id/cntSchnaps"
        app:layout_constraintRight_toRightOf="@+id/cntSchnaps"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/cntSchnaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/plusSchnaps"
        app:layout_constraintLeft_toLeftOf="@+id/cntVodka"
        app:layout_constraintRight_toRightOf="@+id/cntVodka"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/cntVodka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultValue"
        app:layout_constraintBaseline_toBaselineOf="@+id/plusVodka"
        app:layout_constraintLeft_toLeftOf="@+id/cntWhisky"
        app:layout_constraintRight_toRightOf="@+id/cntWhisky"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/cntWhisky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/defaultValue"
        app:layout_constraintBottom_toBottomOf="@+id/plusWhisky"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="31dp"
        android:text="Bier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="45dp"
        android:text="@string/Wein"
        app:layout_constraintBottom_toTopOf="@+id/minusSchnaps"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:text="@string/Schnaps"
        app:layout_constraintBaseline_toBaselineOf="@+id/minusSchnaps"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:text="@string/Vodka"
        app:layout_constraintBaseline_toBaselineOf="@+id/minusVodka"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:text="@string/Whisky"
        app:layout_constraintBaseline_toBaselineOf="@+id/minusWhisky"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/minusWein"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="minusWein"
        android:text="@string/minus"
        app:layout_constraintLeft_toLeftOf="@+id/minusSchnaps"
        app:layout_constraintRight_toRightOf="@+id/minusSchnaps"
        app:layout_constraintTop_toBottomOf="@+id/minusBier"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/minusBier"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="minusBier"
        android:text="@string/minus"
        app:layout_constraintLeft_toLeftOf="@+id/minusWein"
        app:layout_constraintRight_toRightOf="@+id/minusWein"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/minusSchnaps"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="27dp"
        android:onClick="minusSchnaps"
        android:text="@string/minus"
        app:layout_constraintRight_toLeftOf="@+id/schnaps"
        app:layout_constraintTop_toBottomOf="@+id/minusWein"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/minusVodka"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:onClick="minusVodka"
        android:text="@string/minus"
        app:layout_constraintLeft_toLeftOf="@+id/minusSchnaps"
        app:layout_constraintRight_toRightOf="@+id/minusSchnaps"
        app:layout_constraintTop_toBottomOf="@+id/minusSchnaps"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/minusWhisky"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="minusWhisky"
        android:text="@string/minus"
        app:layout_constraintLeft_toLeftOf="@+id/minusVodka"
        app:layout_constraintRight_toRightOf="@+id/minusVodka"
        app:layout_constraintTop_toBottomOf="@+id/minusVodka"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/plusWein"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="plusWein"
        android:text="@string/plus"
        app:layout_constraintLeft_toLeftOf="@+id/plusBier"
        app:layout_constraintRight_toRightOf="@+id/plusBier"
        app:layout_constraintTop_toBottomOf="@+id/plusBier"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/plusBier"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:onClick="plusBier"
        android:text="@string/plus"
        app:layout_constraintLeft_toRightOf="@+id/bier"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/plusSchnaps"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:onClick="plusSchnaps"
        android:text="@string/plus"
        app:layout_constraintLeft_toLeftOf="@+id/plusWein"
        app:layout_constraintRight_toRightOf="@+id/plusWein"
        app:layout_constraintTop_toBottomOf="@+id/plusWein"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/plusVodka"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:onClick="plusVodka"
        android:text="@string/plus"
        app:layout_constraintLeft_toLeftOf="@+id/plusSchnaps"
        app:layout_constraintRight_toRightOf="@+id/plusSchnaps"
        app:layout_constraintTop_toBottomOf="@+id/plusSchnaps"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/plusWhisky"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:onClick="plusWhisky"
        android:text="@string/plus"
        app:layout_constraintLeft_toLeftOf="@+id/plusVodka"
        app:layout_constraintRight_toRightOf="@+id/plusVodka"
        app:layout_constraintTop_toBottomOf="@+id/plusVodka"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/stopTracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="16dp"
        android:onClick="stop"
        android:text="@string/tracking_stoppen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
